docs/examples/fenum-extension/Expected.txt
FenumDemo.java:22: error: [assignment.type.incompatible] incompatible types in assignment.
    @Fenum("B") int state2 = TestStatic.ACONST1; // Incompatible fenums forbidden!
                                       ^
  found   : @Fenum("A") int
  required: @Fenum("B") int
FenumDemo.java:30: error: [assignment.type.incompatible] incompatible types in assignment.
    int state6 = TestStatic.BCONST1; // Incompatible fenums forbidden!
                           ^
  found   : @Fenum("B") int
  required: @FenumUnqualified int
FenumDemo.java:31: error: [assignment.type.incompatible] incompatible types in assignment.
    @NonNegative int state7 = TestStatic.BCONST1; // Incompatible fenums forbidden!
                                        ^
  found   : @Fenum("B") int
  required: @FenumUnqualified int
FenumDemo.java:38: error: [assignment.type.incompatible] incompatible types in assignment.
        state1 = 4; // Direct use of value forbidden!
                 ^
  found   : @FenumUnqualified int
  required: @Fenum("A") int
FenumDemo.java:39: error: [assignment.type.incompatible] incompatible types in assignment.
        state1 = TestStatic.BCONST1; // Incompatible fenums forbidden!
                           ^
  found   : @Fenum("B") int
  required: @Fenum("A") int
FenumDemo.java:42: error: [argument.type.incompatible] incompatible argument for parameter p of fenumArg.
        fenumArg(5); // Direct use of value forbidden!
                 ^
  found   : @FenumUnqualified int
  required: @Fenum("A") int
FenumDemo.java:43: error: [argument.type.incompatible] incompatible argument for parameter p of fenumArg.
        fenumArg(TestStatic.BCONST1); // Incompatible fenums forbidden!
                           ^
  found   : @Fenum("B") int
  required: @Fenum("A") int
FenumDemo.java:46: error: [assignment.type.incompatible] incompatible types in assignment.
        state3 = 8;
                 ^
  found   : @FenumUnqualified int
  required: @MyFenum int
FenumDemo.java:47: error: [assignment.type.incompatible] incompatible types in assignment.
        state3 = TestStatic.ACONST2; // Incompatible fenums forbidden!
                           ^
  found   : @Fenum("A") int
  required: @MyFenum int
FenumDemo.java:50: error: [argument.type.incompatible] incompatible argument for parameter p of myFenumArg.
        myFenumArg(8); // Direct use of value forbidden!
                   ^
  found   : @FenumUnqualified int
  required: @MyFenum int
FenumDemo.java:51: error: [argument.type.incompatible] incompatible argument for parameter p of myFenumArg.
        myFenumArg(TestStatic.BCONST2); // Incompatible fenums forbidden!
                             ^
  found   : @Fenum("B") int
  required: @MyFenum int
FenumDemo.java:70: error: [binary.type.incompatible] binary operation between incompatible fenums: @Fenum("A") int and @Fenum("B") int
        if (TestStatic.ACONST1 < TestStatic.BCONST2) {}
                               ^
FenumDemo.java:72: error: [binary.type.incompatible] binary operation between incompatible fenums: @Fenum("A") int and @Fenum("B") int
        if (TestStatic.ACONST1 == TestStatic.BCONST2) {}
                               ^
FenumDemo.java:74: error: [binary.type.incompatible] binary operation between incompatible fenums: @Fenum("A") int and @MyFenum int
        if (TestStatic.ACONST1 >= TestStatic.CCONST2) {}
                               ^
FenumDemo.java:77: error: [binary.type.incompatible] binary operation between incompatible fenums: @Fenum("A") int and @FenumUnqualified int
        if (TestStatic.ACONST1 < 5) {}
                               ^
FenumDemo.java:79: error: [binary.type.incompatible] binary operation between incompatible fenums: @Fenum("B") int and @FenumUnqualified int
        if (TestStatic.BCONST1 > 5) {}
                               ^
FenumDemo.java:81: error: [binary.type.incompatible] binary operation between incompatible fenums: @MyFenum int and @FenumUnqualified int
        if (TestStatic.CCONST1 == 5) {}
                               ^
17 errors
